# zora

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.claude/: settings.json
.claude/skills/feature/: SKILL.md
.claude/skills/release/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/arch/: product_spec_v0.md
docs/features/: README.md
docs/guide/: README.md
docs/impls/: v0.1-architecture.md
docs/roadmap/: README.md
prompts/: observe.md  reflect.md  remember.md  search.md
src/: index.rs  main.rs  search.rs  server.rs  store.rs  watch.rs
src/embed/: mod.rs  ollama.rs
