[package]
name = "zora"
version = "0.1.0"
edition = "2024"
description = "Your AI identity, observable and portable. A local-first persona engine with MCP interface."
license = "MIT"
repository = "https://github.com/yicheng47/zora"

[dependencies]
# MCP server — official Rust SDK
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite with bundled (statically linked) + FTS5
rusqlite = { version = "0.34", features = ["bundled", "vtab"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# JSON schema generation for MCP tool inputs
schemars = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# HTTP client (for Ollama API)
reqwest = { version = "0.12", features = ["json"] }

# YAML frontmatter parsing
gray_matter = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
strip = true
